added watch-list controller, validation, model, routes, and swagger documentation
